--- a/index.html
+++ b/index.html
@@ -175,7 +175,21 @@
                 <div><img src="./google.png" alt=""></div>
             </div>
         </section>
-
+<!--         <section>
+            <div class="container">
+                <h2>Your search ends here.</h2>
+                <p>Learn why businesses trust our digital marketing agency to power growth.</p>
+				<div class="">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        
+                    </ul>
+                </div>
+            </div>
+        </section> -->
     </article>
 
 
