--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <h5>leads generated</h5>
                     </div>
                     <div class="bubble cir_second"><h1>1090</h1>
-                        <h5> client testimonials</h5>
+                        <h5 class="sec-cir"> client testimonials</h5>
                     </div>
                     <div class="bubble cir_theird"><h1>500+</h1>
                         <h5>subject-matter experts</h5>
@@ -172,28 +172,52 @@
                 <div><img src="./Sopify.png" alt=""></div>
                 <div><img src="./micros.png" alt=""></div>
                 <div><img src="./Inc.png" alt=""></div>
-                <div><img src="./google.png" alt=""></div>
+                <!-- <div><img src="./google.png" alt=""></div> -->
             </div>
         </section>
-<!--         <section>
+
+                        <!-- section three with js functionality -->
+
+        <section class="section_three">
             <div class="container">
-                <h2>Your search ends here.</h2>
-                <p>Learn why businesses trust our digital marketing agency to power growth.</p>
-				<div class="">
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        
+                <h1 class="js-heading">Your search ends here.</h1>
+                <h4 class="js-para">Learn why businesses trust our digital marketing agency to power growth.
+                </h4>
+                <div class="js-section">
+                    <div class="js-links">
+                    <ul class="link-group">
+                        <li class="link-list active " id="js-change"  onclick="changeContent('Button 1', this)">500+ digital experts</li>
+                        <li class="link-list"  onclick="changeContent('Button 2', this)">25-year track record</li>
+                        <li class="link-list"  onclick="changeContent('Button 3', this)">1,000s of reviews</li>
+                        <li class="link-list"  onclick="changeContent('Button 4', this)">In-house technology</li>
                     </ul>
+                    </div>
+                    <p class="js-content"></p>
+
+                    <di v class="js-double-section">
+                        <div class="side-section same">
+                            <div class="side-content">
+                            Our team has deep expertise across all areas of digital. Need a deep dive on how to set up event tracking for a complex lead process? Want to optimize your sales pipeline using automations? Our digital marketing agency has you covered. With a dedicated account manager, our clients have one go-to contact who interfaces with 500+ subject-matter experts to drive campaign results.
+                            </div>
+                            <div class="call-to-action">
+                                <div  class="about-us
+                                "> About Us
+                                <i class="fa-solid fa-arrow-right arrow"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img-section same"></div>
+                    </div>
                 </div>
             </div>
-        </section> -->
+        </section>
+
     </article>
 
 
                 <!-- Javascript -->
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
+
+
 </body>
 </html>
